fix scrollbar on the problem tabs
- multiple overflow-y:auto were taking effect because
2 divs had the class problem-panel
- the containment of the divs was not really being used to keep
the height 100% all of the way down
- the margin-top on the section was messing up the 100% height
calculation all the way up at the problem-panel-tab-panel

--- a/src/components/navigation/problem-panel.scss
+++ b/src/components/navigation/problem-panel.scss
@@ -2,10 +2,10 @@
 
 .problem-panel {
   height: 100%;
-  position: relative;
 
   .section {
-    margin-top: $document-margin;
+    position: relative;
+    height: 100%;
 
     .canvas {
       overflow: auto;
